# 3D-triangles

./: CMakeLists.txt
src/: config.h  main.cpp
src/geometry/: EigenAdapter.h  line.cpp  line.h  plane.cpp  plane.h  point.h  triangle.cpp  triangle.h  vector.cpp  vector.h
tests/: CMakeLists.txt  main.cpp  plane.cpp
